syntax = "proto3";

option csharp_namespace = "Shared.Grpc.Models";

package car_service;

message VehiclePart {
  int32 id = 1;
  string name = 2;
  string part_number = 3;
  string description = 4;
  double price = 5;
  int32 available_quantity = 6;
}
